# easy_label

./: .gitignore  CMakeLists.txt  main.cpp
